--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -5,81 +5,94 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/primaryColor"
     android:fillViewport="true"
     tools:context=".views.fragments.FragmentWelcome">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:paddingBottom="20dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="20dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/design"
+            app:layout_constraintBottom_toTopOf="@+id/welcome_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/welcome_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/welcome_text"
-            android:textColor="@color/primaryDarkColor"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
             android:textSize="36sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/app_name"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"
             android:fontFamily="@font/poppins_extrabold"
-            android:text="@string/app_name"
-            android:textColor="@color/secondaryColor"
+            android:text="Aboard"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
             android:textSize="48sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
-
-        <!--<com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_start"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_url="https://lottie.host/2c6df325-a41f-4975-82ab-c508df604fec/f4uVcbaaPD.json" />-->
+            app:layout_constraintStart_toStartOf="parent" />
+
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="16dp"
             android:fontFamily="@font/poppins_bold"
             android:minHeight="80dp"
             android:text="@string/start_text"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:textColor="@color/secondaryDarkColor"
             android:textSize="36sp"
             android:textStyle="bold"
+            app:backgroundTint="@color/white"
             app:cornerRadius="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_about"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/app_name" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_about"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp"
             android:fontFamily="@font/poppins_bold"
             android:minHeight="80dp"
             android:text="@string/about_btn_label"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:textColor="@color/secondaryDarkColor"
             android:textSize="36sp"
             android:textStyle="bold"
+            app:backgroundTint="@color/white"
             app:cornerRadius="16dp"
-            app:layout_constraintStart_toStartOf="@+id/btn_start"
-            app:layout_constraintTop_toBottomOf="@+id/btn_start" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/btn_start"
+            app:layout_constraintStart_toStartOf="@+id/btn_start" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
