feat: Implement drag-and-drop functionality for quiz questions and retrieve new item order
- Added RecyclerView to handle drag-and-drop for DragAndDrop question type
- Created DragAndDropAdapter to manage and rearrange quiz items dynamically
- Implemented ItemTouchHelper for drag-and-drop interactions
- Added method to retrieve the new order of items after rearrangement

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         style="@style/Toolbar.Default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
         app:contentInsetStartWithNavigation="0dp"
         app:layout_collapseMode="pin"
         app:layout_constraintEnd_toEndOf="parent"
