--- a/app/src/main/res/layout/item_question_type.xml
+++ b/app/src/main/res/layout/item_question_type.xml
@@ -81,7 +81,7 @@
             <!-- Matching Question Type -->
             <LinearLayout
                 android:id="@+id/matchingLayout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:visibility="visible">
