--- a/app/src/main/res/layout/item_matching_pair.xml
+++ b/app/src/main/res/layout/item_matching_pair.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Term"
-        android:textAppearance="?attr/textAppearanceSubtitle1" />
+        android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:textColor="@color/secondaryDarkColor" />
 
     <!-- Dropdown for matching options (right column) -->
     <Spinner
