--- a/app/src/main/res/layout/fragment_your_score.xml
+++ b/app/src/main/res/layout/fragment_your_score.xml
@@ -48,9 +48,10 @@
         app:strokeWidth="0dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|center_horizontal"
+            android:gravity="center"
             android:orientation="horizontal"
             android:padding="16dp">
 
@@ -70,7 +71,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/poppins_extrabold"
                 android:paddingTop="12dp"
-                android:text="/25"
+                android:text="/100"
                 android:textColor="@color/md_grey_500"
                 android:textSize="40sp"
                 android:textStyle="bold" />
